Lazarus_Athena/include/Intrinsic.pas


    {************************************************************
     *
     *  Work procs
     *
     ************************************************************* }
    { obsolete  }
    { proc  }    { closure  }
function XtAddWorkProc(para1:TXtWorkProc; para2:TXtPointer):TXtWorkProcId;cdecl;external;
    { app_context  }    { proc  }    { closure  }
function XtAppAddWorkProc(para1:TXtAppContext; para2:TXtWorkProc; para3:TXtPointer):TXtWorkProcId;cdecl;external;
    { id  }
procedure XtRemoveWorkProc(para1:TXtWorkProcId);cdecl;external;
    {***************************************************************
     *
     * Graphic Context Management
     **************************************************************** }
    { widget  }    { valueMask  }    { values  }
function XtGetGC(para1:TWidget; para2:TXtGCMask; para3:PXGCValues):TGC;cdecl;external;
    { widget  }    { depth  }    { valueMask  }    { values  }    { dynamicMask  }    { unusedMask  }
function XtAllocateGC(para1:TWidget; para2:TCardinal; para3:TXtGCMask; para4:PXGCValues; para5:TXtGCMask; 
               para6:TXtGCMask):TGC;cdecl;external;
    { This implementation of XtDestroyGC differs from the formal specification
     * for historic backwards compatibility reasons.  As other implementations
     * may conform to the spec, use of XtReleaseGC is strongly encouraged.
      }
    { obsolete  }
    { gc  }
procedure XtDestroyGC(para1:TGC);cdecl;external;
    { object  }    { gc  }
procedure XtReleaseGC(para1:TWidget; para2:TGC);cdecl;external;
    { app_context  }    { cache_ref  }
procedure XtAppReleaseCacheRefs(para1:TXtAppContext; para2:PXtCacheRef);cdecl;external;
    { widget  }    { closure  }    { XtCacheRef  }
    { call_data  }
procedure XtCallbackReleaseCacheRef(para1:TWidget; para2:TXtPointer; para3:TXtPointer);cdecl;external;
    { widget  }    { closure  }    { XtCacheRef*  }
    { call_data  }
procedure XtCallbackReleaseCacheRefList(para1:TWidget; para2:TXtPointer; para3:TXtPointer);cdecl;external;
    { widget  }    { list  }    { count  }
procedure XtSetWMColormapWindows(para1:TWidget; para2:PWidget; para3:TCardinal);cdecl;external;
    { path  }    { substitutions  }    { num_substitutions  }    { predicate  }
function XtFindFile(_XtString:TXconst; para2:TSubstitution; para3:TCardinal; para4:TXtFilePredicate):TXtString;cdecl;external;
    { dpy  }    { type  }    { filename  }    { suffix  }    { path  }    { substitutions  }    { num_substitutions  }    { predicate  }
function XtResolvePathname(para1:PDisplay; _XtString:TXconst; _XtString:TXconst; _XtString:TXconst; _XtString:TXconst; 
               para6:TSubstitution; para7:TCardinal; para8:TXtFilePredicate):TXtString;cdecl;external;
    {***************************************************************
     *
     * Selections
     *
     **************************************************************** }
    { was #define dname def_expr }
    function XT_CONVERT_FAIL : TAtom;      

    { widget  }    { selection  }    { time  }
procedure XtDisownSelection(para1:TWidget; para2:TAtom; para3:TTime);cdecl;external;
    { widget  }    { selection  }    { target  }    { callback  }    { closure  }    { time  }
procedure XtGetSelectionValue(para1:TWidget; para2:TAtom; para3:TAtom; para4:TXtSelectionCallbackProc; para5:TXtPointer; 
                para6:TTime);cdecl;external;
    { widget  }    { selection  }    { targets  }    { count  }    { callback  }    { closures  }    { time  }
procedure XtGetSelectionValues(para1:TWidget; para2:TAtom; para3:PAtom; para4:longint; para5:TXtSelectionCallbackProc; 
                para6:PXtPointer; para7:TTime);cdecl;external;
    { app_context  }    { timeout  }
procedure XtAppSetSelectionTimeout(para1:TXtAppContext; para2:dword);cdecl;external;
    { obsolete  }
    { timeout  }
procedure XtSetSelectionTimeout(para1:dword);cdecl;external;
    { app_context  }
function XtAppGetSelectionTimeout(para1:TXtAppContext):dword;cdecl;external;
    { obsolete  }
function XtGetSelectionTimeout:dword;cdecl;external;
    { widget  }    { selection  }    { request_id  }
function XtGetSelectionRequest(para1:TWidget; para2:TAtom; para3:TXtRequestId):PXSelectionRequestEvent;cdecl;external;
    { widget  }    { selection  }    { target  }    { selection_callback  }    { client_data  }    { time  }
procedure XtGetSelectionValueIncremental(para1:TWidget; para2:TAtom; para3:TAtom; para4:TXtSelectionCallbackProc; para5:TXtPointer; 
                para6:TTime);cdecl;external;
    { widget  }    { selection  }    { targets  }    { count  }    { callback  }    { client_data  }    { time  }
procedure XtGetSelectionValuesIncremental(para1:TWidget; para2:TAtom; para3:PAtom; para4:longint; para5:TXtSelectionCallbackProc; 
                para6:PXtPointer; para7:TTime);cdecl;external;
    { requestor  }    { selection  }    { type  }    { value  }    { length  }    { format  }
procedure XtSetSelectionParameters(para1:TWidget; para2:TAtom; para3:TAtom; para4:TXtPointer; para5:dword; 
                para6:longint);cdecl;external;
    { owner  }    { selection  }    { request_id  }    { type_return  }    { value_return  }    { length_return  }    { format_return  }
procedure XtGetSelectionParameters(para1:TWidget; para2:TAtom; para3:TXtRequestId; para4:PAtom; para5:PXtPointer; 
                para6:Pdword; para7:Plongint);cdecl;external;
    { requestor  }    { selection  }
procedure XtCreateSelectionRequest(para1:TWidget; para2:TAtom);cdecl;external;
    { requestor  }    { selection  }    { time  }
procedure XtSendSelectionRequest(para1:TWidget; para2:TAtom; para3:TTime);cdecl;external;
    { requestor  }    { selection  }
procedure XtCancelSelectionRequest(para1:TWidget; para2:TAtom);cdecl;external;
    { widget  }
function XtReservePropertyAtom(para1:TWidget):TAtom;cdecl;external;
    { widget  }    { selection  }
procedure XtReleasePropertyAtom(para1:TWidget; para2:TAtom);cdecl;external;
    { widget  }    { keycode  }    { modifiers  }    { owner_events  }    { pointer_mode  }    { keyboard_mode  }
procedure XtGrabKey(para1:TWidget; para2:TXtKeyCode; para3:TModifiers; para4:TXtBoolean; para5:longint; 
                para6:longint);cdecl;external;
    { widget  }    { keycode  }    { modifiers  }
procedure XtUngrabKey(para1:TWidget; para2:TXtKeyCode; para3:TModifiers);cdecl;external;
    { widget  }    { owner_events  }    { pointer_mode  }    { keyboard_mode  }    { time  }
function XtGrabKeyboard(para1:TWidget; para2:TXtBoolean; para3:longint; para4:longint; para5:TTime):longint;cdecl;external;
    { widget  }    { time  }
procedure XtUngrabKeyboard(para1:TWidget; para2:TTime);cdecl;external;
    { widget  }    { button  }    { modifiers  }    { owner_events  }    { event_mask  }    { pointer_mode  }    { keyboard_mode  }    { confine_to  }    { cursor  }
procedure XtGrabButton(para1:TWidget; para2:longint; para3:TModifiers; para4:TXtBoolean; para5:dword; 
                para6:longint; para7:longint; para8:TWindow; para9:TCursor);cdecl;external;
    { widget  }    { button  }    { modifiers  }
procedure XtUngrabButton(para1:TWidget; para2:dword; para3:TModifiers);cdecl;external;
    { widget  }    { owner_events  }    { event_mask  }    { pointer_mode  }    { keyboard_mode  }    { confine_to  }    { cursor  }    { time  }
function XtGrabPointer(para1:TWidget; para2:TXtBoolean; para3:dword; para4:longint; para5:longint; 
               para6:TWindow; para7:TCursor; para8:TTime):longint;cdecl;external;
    { widget  }    { time  }
procedure XtUngrabPointer(para1:TWidget; para2:TTime);cdecl;external;
    { dpy  }    { name_return  }    { class_return  }
procedure XtGetApplicationNameAndClass(para1:PDisplay; para2:PString; para3:PString);cdecl;external;
    { dpy  }    { drawable  }    { widget  }
procedure XtRegisterDrawable(para1:PDisplay; para2:TDrawable; para3:TWidget);cdecl;external;
    { dpy  }    { drawable  }
procedure XtUnregisterDrawable(para1:PDisplay; para2:TDrawable);cdecl;external;
    { dpy  }
function XtHooksOfDisplay(para1:PDisplay):TWidget;cdecl;external;
    type
      PXtCreateHookDataRec = ^TXtCreateHookDataRec;
      TXtCreateHookDataRec = record
          _type : TString;
          widget : TWidget;
          args : TArgList;
          num_args : TCardinal;
        end;
      TXtCreateHookData = PXtCreateHookDataRec;
      PXtCreateHookData = ^TXtCreateHookData;

      PXtChangeHookDataRec = ^TXtChangeHookDataRec;
      TXtChangeHookDataRec = record
          _type : TString;
          widget : TWidget;
          event_data : TXtPointer;
          num_event_data : TCardinal;
        end;
      TXtChangeHookData = PXtChangeHookDataRec;
      PXtChangeHookData = ^TXtChangeHookData;

      PXtChangeHookSetValuesDataRec = ^TXtChangeHookSetValuesDataRec;
      TXtChangeHookSetValuesDataRec = record
          old : TWidget;
          req : TWidget;
          args : TArgList;
          num_args : TCardinal;
        end;
      TXtChangeHookSetValuesData = PXtChangeHookSetValuesDataRec;
      PXtChangeHookSetValuesData = ^TXtChangeHookSetValuesData;

      PXtConfigureHookDataRec = ^TXtConfigureHookDataRec;
      TXtConfigureHookDataRec = record
          _type : TString;
          widget : TWidget;
          changeMask : TXtGeometryMask;
          changes : TXWindowChanges;
        end;
      TXtConfigureHookData = PXtConfigureHookDataRec;
      PXtConfigureHookData = ^TXtConfigureHookData;

      PXtGeometryHookDataRec = ^TXtGeometryHookDataRec;
      TXtGeometryHookDataRec = record
          _type : TString;
          widget : TWidget;
          request : PXtWidgetGeometry;
          reply : PXtWidgetGeometry;
          result : TXtGeometryResult;
        end;
      TXtGeometryHookData = PXtGeometryHookDataRec;
      PXtGeometryHookData = ^TXtGeometryHookData;

      PXtDestroyHookDataRec = ^TXtDestroyHookDataRec;
      TXtDestroyHookDataRec = record
          _type : TString;
          widget : TWidget;
        end;
      TXtDestroyHookData = PXtDestroyHookDataRec;
      PXtDestroyHookData = ^TXtDestroyHookData;
    { app_context  }    { dpy_return  }    { num_dpy_return  }
